# artk

./: .editorconfig  .gitignore  .golangci.yaml  LICENSE  README.md  combine_go_sum.sh  doc.go  empty_test.go  go.mod  go.work  go.work.sum  ok  ok.sh  regenerate.sh  release-tags.sh  renovate.json
.circleci/: config.yml
.github/: CODEOWNERS
apperror/: apperror.go  apperror_test.go  conflict.go  conflict_test.go  forbidden.go  forbidden_test.go  kind.go  kind_string.go  kind_test.go  not_found.go  not_found_test.go  not_modified.go  not_modified_test.go  precondition_failed.go  precondition_failed_test.go  timeout.go  timeout_test.go  too_many_requests.go  too_many_requests_test.go  unauthorized.go  unauthorized_test.go  unknown.go  validation.go  validation_test.go
assume/: assume.go  assume_test.go  doc.go  equal.go  equal_test.go  success.go  success_test.go  true.go  true_test.go  zero_and_nil.go  zero_and_nil_test.go
asynctx/: from.go  from_test.go
broken/: doc.go  reader.go  reader_test.go
clone/: clone.go  clone_test.go  of.go  of_test.go
core/: go.mod
core/testbarrier/: BUILD.bazel  barrier.go  barrier_test.go
crud/: doc.go  in_memory_repository.go  in_memory_repository_test.go  repository.go
ddd/: ddd.go  doc.go  in_memory_crud_repository.go  in_memory_crud_repository_test.go
event/: doc.go  helpers_test.go  interfaces.go  mux.go  mux_test.go  none.go  none_test.go  stream.go  stream_test.go
eventmux/: doc.go  helpers_test.go  interfaces.go  mux.go  mux_test.go  none.go  none_test.go
httperror/: doc.go  status.go  status_test.go  text.go  (+1 more)
(+88 files in other folders)
