load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "testbarrier",
    srcs = ["barrier.go"],
    importpath = "protoctx/internal/testbarrier",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/ensure"],
)

go_test(
    name = "testbarrier_test",
    size = "small",  # keep
    srcs = ["barrier_test.go"],
    deps = [":testbarrier"],
)
